--- a/frontend/src/app/frontend/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/frontend/components/activiteiten/activiteiten.component.html
@@ -1,58 +1,20 @@
 <div class="row mb-4">
-    <div class="col-lg-12">
-      <ngb-carousel *ngIf="images">
-        <ng-template ngbSlide>
-          <img
-            [src]="images[0]"
-            alt="Random first slide"
-            style="width:100%; height:100%; background:#777; color:#777;"
-          />
-          <div class="carousel-caption carousel-inner-text">
-            <h2>ACTIVITEITEN</h2>
-            <p>
-              Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbod
-              aan activiteiten. Er is voor een ieder wat wils. Kijk regelmatig in
-              ons steeds wisselende aanbod. We zien u graag terug. U bent van
-              harte welkom!
-            </p>
-          </div>
-        </ng-template>
-        <ng-template ngbSlide>
-          <img
-            [src]="images[1]"
-            alt="Random second slide"
-            style="width:100%; height:100%; background:#777; color:#777;"
-          />
-          <div class="carousel-caption carousel-inner-text">
-            <h2>ACTIVITEITEN</h2>
-            <p>
-              Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbod
-              aan activiteiten. Er is voor een ieder wat wils. Kijk regelmatig in
-              ons steeds wisselende aanbod. We zien u graag terug. U bent van
-              harte welkom!
-            </p>
-          </div>
-        </ng-template>
-        <ng-template ngbSlide>
-          <img
-            [src]="images[2]"
-            alt="Random third slide"
-            style="width:100%; height:100%; background:#777; color:#777;"
-          />
-          <div class="carousel-caption carousel-inner-text">
-            <h2>ACTIVITEITEN</h2>
-            <p>
-              Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbod
-              aan activiteiten. Er is voor een ieder wat wils. Kijk regelmatig in
-              ons steeds wisselende aanbod. We zien u graag terug. U bent van
-              harte welkom!
-            </p>
-          </div>
-        </ng-template>
-      </ngb-carousel>
-    </div>
+  <div class="col-lg-12">
+    <ngb-carousel>
+      <ng-template ngbSlide *ngFor="let activiteit of (activiteiten | async)">
+        <img
+          src="assets/img/{{ activiteit.thumb }}"
+          alt="Random first slide"
+          style="width:100%; height:100%; background:#777; color:#777;"
+        />
+        <div class="carousel-caption carousel-inner-text">
+          <h2>{{ activiteit.naam }}</h2>
+          <p>{{ activiteit.beschrijving }}</p>
+        </div>
+      </ng-template>
+    </ngb-carousel>
   </div>
-
+</div>
 
 <div class="table-responsive mt-2">
   <table class="table table-striped table-sm">
@@ -73,8 +35,16 @@
           <h4>{{ activiteit.naam }}</h4>
           {{ activiteit.beschrijving }}
         </td>
-        <td>{{ activiteit.datum }}<br>
-          <button type="button" class="btn btn-primary btn-block btn-primary movelake">Aanmelden</button>
+        <td>
+          {{ activiteit.datum }}<br />
+          <p>
+            <button
+              type="button"
+              class="btn btn-primary btn-block btn-primary movelake"
+            >
+              Aanmelden
+            </button>
+          </p>
         </td>
         <td>{{ activiteit.capaciteit }}</td>
         <td>{{ activiteit.prijs | currency: "EUR" }}</td>
