--- a/frontend/src/app/frontend/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/frontend/components/activiteiten/activiteiten.component.html
@@ -10,6 +10,9 @@
         <div class="carousel-caption carousel-inner-text">
           <h2>{{ activiteit.naam }}</h2>
           <p>{{ activiteit.beschrijving }}</p>
+          <p>
+            <button class="btn btn-lg btn-primary">Aanmelden</button>
+          </p>
         </div>
       </ng-template>
     </ngb-carousel>
@@ -17,14 +20,14 @@
 </div>
 
 <div class="table-responsive mt-2">
-  <table class="table table-striped table-sm">
+  <table id="ml01" class="table table-striped table-sm" >
     <thead>
       <tr>
         <th></th>
         <th>Activiteit</th>
         <th>Datum</th>
-        <th>Capaciteit</th>
         <th>Prijs</th>
+        <th>Capaciteit</th>
         <th></th>
       </tr>
     </thead>
@@ -36,7 +39,7 @@
           {{ activiteit.beschrijving }}
         </td>
         <td>
-          {{ activiteit.datum }}<br />
+          {{ activiteit.datum }}<br/><br/>
           <p>
             <button
               type="button"
@@ -46,8 +49,8 @@
             </button>
           </p>
         </td>
-        <td>{{ activiteit.capaciteit }}</td>
         <td>{{ activiteit.prijs | currency: "EUR" }}</td>
+        <td>{{ activiteit.capaciteit }}</td>
       </tr>
     </tbody>
   </table>
