--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -1,3 +1,12 @@
 $theme-colors: (
         "primary": #005693
 );
+
+table#ml01 {
+  width: 98%;
+  // tr:hover {background-color: #c2cbff;}
+  // width: auto;
+  margin-left: 1%;
+  margin-right: 1%;
+
+};
