--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -29,7 +29,7 @@
   <table class="table table-striped table-sm">
     <thead>
       <tr>
-        <th>Kamernummer</th>
+        <th>Kamernaam</th>
         <th>Kamertype</th>
         <th>Kamerligging</th>
         <th>Aantalpersonen</th>
@@ -40,7 +40,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let kamer of (kamers | kamersfilter: show)">
-        <td>{{ kamer.kamerNummer }}</td>
+        <td>{{ kamer.kamerNaam }}</td>
         <td>{{ kamer.kamerType }}</td>
         <td>{{ kamer.kamerLigging }}</td>
         <td>{{ kamer.aantalPersonen }}</td>
@@ -53,7 +53,6 @@
     </tbody>
   </table>
 </div>
-
 <!-- Modal to confirm deleting room-->
 <ng-template #deleteModal let-modal>
     <div class="modal-header">
@@ -65,7 +64,7 @@
     <div class="modal-body">
       <form>
         <div class="form-group">
-          <P>Kamernummer {{selectedKamer?.kamerNummer}} wordt verwijderd.</P>
+          <P>Kamernummer {{selectedKamer?.kamerNaam}} wordt verwijderd.</P>
           <h3>Weet je het zeker?</h3>
         </div>
       </form>
