--- a/frontend/src/app/frontend/components/restaurant/restaurant.component.html
+++ b/frontend/src/app/frontend/components/restaurant/restaurant.component.html
@@ -4,80 +4,47 @@
   <div class="col-lg-12">
     <ngb-carousel *ngIf="images">
       <ng-template ngbSlide>
-        <img
-          [src]="images[0]"
-          alt="Random first slide"
-          style="width:100%; height:100%; background:#777; color:#777;"
-        />
+        <img [src]="images[0]" alt="Random first slide" style="width:100%; height:100%; background:#777; color:#777;">
         <div class="carousel-caption carousel-inner-text">
           <h2>RESTAURANT</h2>
+          <p>Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
+            geluk
+            mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
+            vrienden. Een perfecte reden om even samen te ontspannen en heerlijk te genieten van de
+            warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
+            restaurant. Welkom!</p>
           <p>
-            Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan
-            en met een beetje geluk mogen zelfs de schaatsen ingevet worden. De
-            winter, de tijd van gezelligheid met elkaar en vrienden. Een
-            perfecte reden om even samen te ontspannen en heerlijk te genieten
-            van de warmte bij de openhaard in de bar of 1 van de mooie
-            wildgerechten in ons sfeervolle restaurant. Welkom!
-          </p>
-          <p>
-            <button
-              class="btn btn-lg btn-primary"
-              (click)="open(modalReservation)"
-            >
-              Reserveer
-            </button>
+            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
           </p>
         </div>
       </ng-template>
       <ng-template ngbSlide>
-        <img
-          [src]="images[1]"
-          alt="Random second slide"
-          style="width:100%; height:100%; background:#777; color:#777;"
-        />
+        <img [src]="images[1]" alt="Random second slide" style="width:100%; height:100%; background:#777; color:#777;">
         <div class="carousel-caption carousel-inner-text">
           <h2>RESTAURANT</h2>
+          <p>Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
+            geluk
+            mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
+            vrienden. Een perfecte reden om even samen te ontspannen en heerlijk te genieten van de
+            warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
+            restaurant. Welkom!</p>
           <p>
-            Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan
-            en met een beetje geluk mogen zelfs de schaatsen ingevet worden. De
-            winter, de tijd van gezelligheid met elkaar en vrienden. Een
-            perfecte reden om even samen te ontspannen en heerlijk te genieten
-            van de warmte bij de openhaard in de bar of 1 van de mooie
-            wildgerechten in ons sfeervolle restaurant. Welkom!
-          </p>
-          <p>
-            <button
-              class="btn btn-lg btn-primary"
-              (click)="open(modalReservation)"
-            >
-              Reserveer
-            </button>
+            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
           </p>
         </div>
       </ng-template>
       <ng-template ngbSlide>
-        <img
-          [src]="images[2]"
-          alt="Random third slide"
-          style="width:100%; height:100%; background:#777; color:#777;"
-        />
+        <img [src]="images[2]" alt="Random third slide" style="width:100%; height:100%; background:#777; color:#777;">
         <div class="carousel-caption carousel-inner-text">
           <h2>RESTAURANT</h2>
+          <p>Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
+            geluk
+            mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
+            vrienden. Een perfecte reden om even samen te ontspannen en heerlijk te genieten van de
+            warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
+            restaurant. Welkom!</p>
           <p>
-            Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan
-            en met een beetje geluk mogen zelfs de schaatsen ingevet worden. De
-            winter, de tijd van gezelligheid met elkaar en vrienden. Een
-            perfecte reden om even samen te ontspannen en heerlijk te genieten
-            van de warmte bij de openhaard in de bar of 1 van de mooie
-            wildgerechten in ons sfeervolle restaurant. Welkom!
-          </p>
-          <p>
-            <button
-              class="btn btn-lg btn-primary"
-              (click)="open(modalReservation)"
-            >
-              Reserveer
-            </button>
+            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
           </p>
         </div>
       </ng-template>
@@ -86,11 +53,12 @@
 </div>
 
 <div class="container mb-4">
+
   <ngb-accordion [closeOthers]="true" activeIds="">
     <ngb-panel id="static-1" title="Voorgerecht">
       <ng-template ngbPanelContent>
         <div class="card-body">
-          <table class="table table-borderless">
+          <table class="table table-striped table-borderless">
             <thead>
               <tr class="d-flex">
                 <th class="col-1"></th>
@@ -99,25 +67,40 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="d-flex" *ngFor="let gerecht of (gerechten | async)">
-                <td class="col-1" *ngIf="gerecht.type === 'Voorgerecht'"></td>
-                <td class="col-8" *ngIf="gerecht.type === 'Voorgerecht'">
-                  {{ gerecht.naam }}
-                </td>
-                <td class="col-3" *ngIf="gerecht.type === 'Voorgerecht'">
-                  {{ gerecht.prijs | currency: "EUR" }}
-                </td>
+              <tr class="d-flex">
+                <td class="col-1">1</td>
+                <td class="col-8">Salade Falafel</td>
+                <td class="col-3">€ 13,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">2</td>
+                <td class="col-8">Salade Geitenkaas</td>
+                <td class="col-3">€ 14,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">3</td>
+                <td class="col-8">Salade Black Angus</td>
+                <td class="col-3">€ 15,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">4</td>
+                <td class="col-8">Salade Sashimi</td>
+                <td class="col-3">€ 15,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">5</td>
+                <td class="col-8">Salade Carpaccio</td>
+                <td class="col-3">€ 14,50</td>
               </tr>
             </tbody>
           </table>
         </div>
       </ng-template>
     </ngb-panel>
-
     <ngb-panel title="Hoofdgerecht">
       <ng-template ngbPanelContent>
         <div class="card-body">
-          <table class="table table-borderless">
+          <table class="table table-striped table-borderless">
             <thead>
               <tr class="d-flex">
                 <th class="col-1"></th>
@@ -126,14 +109,30 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="d-flex" *ngFor="let gerecht of (gerechten | async)">
-                <td class="col-1" *ngIf="gerecht.type === 'Hoofdgerecht'"></td>
-                <td class="col-8" *ngIf="gerecht.type === 'Hoofdgerecht'">
-                  {{ gerecht.naam }}
-                </td>
-                <td class="col-3" *ngIf="gerecht.type === 'Hoofdgerecht'">
-                  {{ gerecht.prijs | currency: "EUR" }}
-                </td>
+              <tr class="d-flex">
+                <td class="col-1">6</td>
+                <td class="col-8">Hongaarse Varkensschnitzel</td>
+                <td class="col-3">€ 18,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">7</td>
+                <td class="col-8">Varkenshaassaté</td>
+                <td class="col-3">€ 21,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">8</td>
+                <td class="col-8">Sukade Steak</td>
+                <td class="col-3">€ 22,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">9</td>
+                <td class="col-8">Gevulde Varkenshaas</td>
+                <td class="col-3">€ 20,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">10</td>
+                <td class="col-8">Lamsrack</td>
+                <td class="col-3">€ 24,50</td>
               </tr>
             </tbody>
           </table>
@@ -143,7 +142,7 @@
     <ngb-panel title="Nagerecht">
       <ng-template ngbPanelContent>
         <div class="card-body">
-          <table class="table table-borderless">
+          <table class="table table-striped table-borderless">
             <thead>
               <tr class="d-flex">
                 <th class="col-1"></th>
@@ -152,14 +151,30 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="d-flex" *ngFor="let gerecht of (gerechten | async)">
-                <td class="col-1" *ngIf="gerecht.type === 'Nagerecht'"></td>
-                <td class="col-8" *ngIf="gerecht.type === 'Nagerecht'">
-                  {{ gerecht.naam }}
-                </td>
-                <td class="col-3" *ngIf="gerecht.type === 'Nagerecht'">
-                  {{ gerecht.prijs | currency: "EUR" }}
-                </td>
+              <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                <td class="col-1">11</td>
+                <td class="col-8">Dame Blanche</td>
+                <td class="col-3">€ 7,00</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">12</td>
+                <td class="col-8">Creme Anglaise</td>
+                <td class="col-3">€ 7,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">13</td>
+                <td class="col-8">Nutella Parfait</td>
+                <td class="col-3">€ 7,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">14</td>
+                <td class="col-8">Creme Brulee Van Limoncello </td>
+                <td class="col-3">€ 7,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">15</td>
+                <td class="col-8">Kaasplankje</td>
+                <td class="col-3">€ 11,50</td>
               </tr>
             </tbody>
           </table>
@@ -170,7 +185,7 @@
       <ng-template ngbPanelContent>
         <div class="card-body">
           <h4>Frisdrank</h4>
-          <table class="table table-borderless">
+          <table class="table table-striped table-borderless">
             <thead>
               <tr class="d-flex">
                 <th class="col-1"></th>
@@ -179,19 +194,25 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="d-flex" *ngFor="let gerecht of (gerechten | async)">
-                <td class="col-1" *ngIf="gerecht.subtype === 'Fris'"></td>
-                <td class="col-8" *ngIf="gerecht.subtype === 'Fris'">
-                  {{ gerecht.naam }}
-                </td>
-                <td class="col-3" *ngIf="gerecht.subtype === 'Fris'">
-                  {{ gerecht.prijs | currency: "EUR" }}
-                </td>
+              <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                <td class="col-1">16</td>
+                <td class="col-8">Sinas</td>
+                <td class="col-3">€ 2,00</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">17</td>
+                <td class="col-8">Cola</td>
+                <td class="col-3">€ 2,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">18</td>
+                <td class="col-8">Spa blauw</td>
+                <td class="col-3">€ 1,50</td>
               </tr>
             </tbody>
           </table>
           <h4 class="mt-4">Alcohol</h4>
-          <table class="table table-borderless">
+          <table class="table table-striped table-borderless">
             <thead>
               <tr class="d-flex">
                 <th class="col-1"></th>
@@ -200,14 +221,20 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="d-flex" *ngFor="let gerecht of (gerechten | async)">
-                <td class="col-1" *ngIf="gerecht.subtype === 'Alcohol'"></td>
-                <td class="col-8" *ngIf="gerecht.subtype === 'Alcohol'">
-                  {{ gerecht.naam }}
-                </td>
-                <td class="col-3" *ngIf="gerecht.subtype === 'Alcohol'">
-                  {{ gerecht.prijs | currency: "EUR" }}
-                </td>
+              <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                <td class="col-1">19</td>
+                <td class="col-8">Wijn</td>
+                <td class="col-3">€ 3,00</td>
+              </tr>
+              <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                <td class="col-1">20</td>
+                <td class="col-8">Bier</td>
+                <td class="col-3">€ 2,50</td>
+              </tr>
+              <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                <td class="col-1">21</td>
+                <td class="col-8">Whisky</td>
+                <td class="col-3">€ 4,00</td>
               </tr>
             </tbody>
           </table>
@@ -221,12 +248,7 @@
   <ng-template #modalReservation let-modal>
     <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title">Reserveer</h4>
-      <button
-        type="button"
-        class="close"
-        aria-label="Close"
-        (click)="modal.dismiss('Cross click')"
-      >
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
@@ -235,66 +257,30 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputVoornaam">Voornaam</label>
-            <input
-              type="text"
-              class="form-control"
-              id="inputVoornaam"
-              placeholder="Voornaam"
-              required
-            />
+            <input type="text" class="form-control" id="inputVoornaam" placeholder="Voornaam" required>
           </div>
           <div class="form-group col-md-6">
             <label for="inputAchternaam">Achternaam</label>
-            <input
-              type="text"
-              class="form-control"
-              id="inputAchternaam"
-              placeholder="Achternaam"
-              required
-            />
+            <input type="text" class="form-control" id="inputAchternaam" placeholder="Achternaam" required>
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputPostcode">Postcode</label>
-            <input
-              type="text"
-              class="form-control"
-              id="inputPostcode"
-              placeholder="Postcode"
-              required
-            />
+            <input type="text" class="form-control" id="inputPostcode" placeholder="Postcode" required>
           </div>
           <div class="form-group col-md-6">
             <label for="inputHuisnummer">Huisnummer</label>
-            <input
-              type="text"
-              class="form-control"
-              id="inputHuisnummer"
-              placeholder="Huisnummer"
-              required
-            />
+            <input type="text" class="form-control" id="inputHuisnummer" placeholder="Huisnummer" required>
           </div>
         </div>
         <div class="form-group">
           <label for="inputEmail">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            id="inputEmail"
-            placeholder="Email"
-            required
-          />
+          <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
         </div>
         <div class="form-group">
           <label for="inputTelefoonnummer">Telefoonnummer</label>
-          <input
-            type="tel"
-            class="form-control"
-            id="inputTelefoonnummer"
-            placeholder="Telefoonnummer"
-            required
-          />
+          <input type="tel" class="form-control" id="inputTelefoonnummer" placeholder="Telefoonnummer" required>
         </div>
         <div class="form-group">
           <label for="inputAantal">Aantal personen</label>
@@ -314,23 +300,17 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputDatum">Datum</label>
-            <input type="date" class="form-control" id="inputDatum" required />
+            <input type="date" class="form-control" id="inputDatum" required>
           </div>
           <div class="form-group col-md-6">
             <label for="inputTijd">Tijd</label>
-            <input type="time" class="form-control" id="inputTijd" required />
+            <input type="time" class="form-control" id="inputTijd" required>
           </div>
         </div>
       </form>
     </div>
     <div class="modal-footer">
-      <button
-        type="button"
-        class="btn btn-outline-dark"
-        (click)="modal.close('Save click')"
-      >
-        Verzenden
-      </button>
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Verzenden</button>
     </div>
   </ng-template>
 </div>
