--- a/frontend/src/app/shared/components/form-tafel/form-tafel.component.html
+++ b/frontend/src/app/shared/components/form-tafel/form-tafel.component.html
@@ -11,21 +11,21 @@
       <input
         type="text"
         class="form-control"
-        formControlName="tafelnummer"
-        [class.is-invalid]="tafelnummer?.invalid && tafelnummer?.touched"
+        formControlName="kenmerk"
+        [class.is-invalid]="kenmerk?.invalid && kenmerk?.touched"
         ngbAutofocus
       />
-      <small class="text-danger" [class.d-none]="tafelnummer?.valid || tafelnummer?.untouched">minimaal 1</small>
+      <small class="text-danger" [class.d-none]="kenmerk?.valid || kenmerk?.untouched">minimaal 1</small>
     </div>
     <div class="form-group">
       <label>Aantal Personen</label>
       <input
         type="number"
         class="form-control"
-        formControlName="aantalPersonen"
-        [class.is-invalid]="aantalPersonen?.invalid && aantalPersonen?.touched"
+        formControlName="personen"
+        [class.is-invalid]="personen?.invalid && personen?.touched"
       />
-      <small class="text-danger" [class.d-none]="aantalPersonen?.valid || aantalPersonen?.untouched">minimaal 1 en maximaal 16</small>
+      <small class="text-danger" [class.d-none]="personen?.valid || personen?.untouched">minimaal 1 en maximaal 16</small>
     </div>
   </form>
   <div class="modal-footer">
