--- a/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
@@ -7,7 +7,7 @@
     <thead>
       <tr>
         <th class="handCursor" (click)="clickColumnHandler('naam')">Naam</th>
-        <th class="handCursor" (click)="clickColumnHandler('type')"h>Type</th>
+        <th class="handCursor" (click)="clickColumnHandler('type')">Type</th>
         <th class="handCursor" (click)="clickColumnHandler('subtype')">SubType</th>
         <th>Prijs</th>
         <th></th>
