--- a/frontend/src/app/managementportal/components/kamers/kamerreserveringen/kamerreservering.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamerreserveringen/kamerreservering.component.html
@@ -2,39 +2,39 @@
 <div class="table-responsive mt-2">
 <table class="table table-striped table-sm">
   <thead>
-    <tr>
-      <th>Voornaam</th>
-      <th>Achternaam</th>
-      <th>Telefoon</th>
-      <th>E-mail</th>
-      <th>Aankomst</th>
-      <th>Vertrek</th>
-      <th>Kamer</th>
-      <th></th>
-      <!--th>Identiteit</th>
-      <th>Postcode</th>
-      <th>Straat</th>
-      <th>Huisnummer</th>
-      <th>Woonplaats</th>
-      <th>Land</th-->
+  <tr>
+    <th (click)="clickColumnHandler('voornaam')">Voornaam</th>
+    <th (click)="clickColumnHandler('achternaam')">Achternaam</th>
+    <th (click)="clickColumnHandler('telefoonnummer')">Telefoon</th>
+    <th (click)="clickColumnHandler('emailadres')">E-mail</th>
+    <th (click)="clickColumnHandler('datumvan')">Aankomst</th>
+    <th (click)="clickColumnHandler('datumtot')">Vertrek</th>
+    <th (click)="clickColumnHandler('kamernaam')">Kamer</th>
+    <th></th>
+    <!--th>Identiteit</th>
+    <th>Postcode</th>
+    <th>Straat</th>
+    <th>Huisnummer</th>
+    <th>Woonplaats</th>
+    <th>Land</th-->
 
-    </tr>
+  </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let kamerreservering of kamerreserveringen">
-      <td>{{kamerreservering.voornaam}}</td>
-      <td>{{kamerreservering.achternaam}}</td>
-      <td>{{kamerreservering.telefoonnummer}}</td>
-      <td>{{kamerreservering.emailadres}}</td>
-      <td>{{kamerreservering.datumvan}}</td>
-      <td>{{kamerreservering.datumtot}} </td>
-      <td>{{kamerreservering.kamernaam}}</td>
-      <!--td>{{kamerreservering.identiteitsid}}</td>
-      <td>{{kamerreservering.postcode}}</td>
-      <td>{{kamerreservering.straat}} </td>
-      <td>{{kamerreservering.huisnummer}}</td>
-      <td>{{kamerreservering.woonplaats}}</td>
-      <td>{{kamerreservering.land}}</td-->
+  <tr *ngFor="let kamerreservering of (kamerreserveringen |  sortgrid:field)" >
+    <td>{{kamerreservering.voornaam}}</td>
+    <td>{{kamerreservering.achternaam}}</td>
+    <td>{{kamerreservering.telefoonnummer}}</td>
+    <td>{{kamerreservering.emailadres}}</td>
+    <td>{{kamerreservering.datumvan}}</td>
+    <td>{{kamerreservering.datumtot}} </td>
+    <td>{{kamerreservering.kamernaam}}</td>
+    <!--td>{{kamerreservering.identiteitsid}}</td>
+    <td>{{kamerreservering.postcode}}</td>
+    <td>{{kamerreservering.straat}} </td>
+    <td>{{kamerreservering.huisnummer}}</td>
+    <td>{{kamerreservering.woonplaats}}</td>
+    <td>{{kamerreservering.land}}</td-->
         <td style="text-align: right">
             <i class="fas fa-edit mr-2" placement="top" ngbTooltip="Toon gegevens" (click)="openFormKamerReserveringDetailsModal(kamerreservering)"></i>
             <i class="fas fa-trash-alt mr-2" placement="top" ngbTooltip="Verwijderen" (click)="deleteRoom(kamerreservering)" ></i>
