--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -16,19 +16,20 @@
   <br />
   <table class="table table-striped table-sm">
     <thead>
-      <tr>
-        <th>Kamernaam</th>
-        <th>Kamertype</th>
-        <th>Kamerligging</th>
-        <th>Aantalpersonen</th>
-        <th>Prijs</th>
-        <th></th>
-        <th></th>
-        <th></th>
-      </tr>
+    <tr>
+      <th (click)="clickColumnHandler('kamerNaam')">Kamernaam</th>
+      <th (click)="clickColumnHandler('kamerType')">Kamertype</th>
+      <th (click)="clickColumnHandler('kamerLigging')">Kamerligging</th>
+      <th (click)="clickColumnHandler('aantalPersonen')">Aantalpersonen</th>
+      <th (click)="clickColumnHandler('prijs')">Prijs</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let kamer of (kamers | async | kamersfilter: show)">
+
+    <tr *ngFor="let kamer of (kamers | async | kamersfilter: show | sortgrid:field)">
         <td>{{ kamer.kamerNaam }}</td>
         <td>{{ kamer.kamerType }}</td>
         <td>{{ kamer.kamerLigging }}</td>
